--- a/back-end/.env
+++ b/back-end/.env
@@ -1,4 +1,4 @@
 PORT=3000
 SECRET_KEY='application_secret_key'
-MONGO_DB='mongodb+srv://devmehdi0:Ckaq2LPsMuIm5tpa@cluster0.teskxje.mongodb.net/'
+MONGO_DB= "mongodb+srv://devmehdi0:Ckaq2LPsMuIm5tpa@cluster0.teskxje.mongodb.net/?retryWrites=true&w=majority&appName=social-media"
 
