--- a/back-end/.env
+++ b/back-end/.env
@@ -1,4 +1,6 @@
 PORT=3000
 SECRET_KEY='application_secret_key'
-MONGO_DB= "mongodb+srv://devmehdi0:Ckaq2LPsMuIm5tpa@cluster0.teskxje.mongodb.net/?retryWrites=true&w=majority&appName=social-media"
+# MONGO_DB= "mongodb+srv://devmehdi0:Ckaq2LPsMuIm5tpa@cluster0.teskxje.mongodb.net/?retryWrites=true&w=majority&appName=social-media"
+
+MONGO_DB = "mongodb://localhost:27017/social_media_db" #local for testing
 
